# hashring_coordinator

./: Cargo.toml  README.md
.github/workflows/: audit.yml  rust.yml
examples/: cluster.rs  simple.rs
src/: hashring.rs  lib.rs
src/hashring/: coordinator.rs  crud.rs  iterator.rs
tests/: feature_derive_test.rs
